tests/e2e/positive/putchar/input.ei
int putchar(int c);

int main() {
    putchar('H' as int);
    putchar('i' as int);
    return 0;
}
