tests/e2e/negative/void-var/input.ei
void nothing() {}

int main() {
    void variable = nothing();
}
